--- a/src/pages/Portfolio.css
+++ b/src/pages/Portfolio.css
@@ -100,6 +100,14 @@
   .saucesource-image img:hover {
     border: 4px solid #ff7800;
   }
+
+  .resultsfixer-image img {
+    border: 4px solid #8f61d7;
+  }
+
+  .resultsfixer-image img:hover {
+    border: 4px solid #8f61d7;
+  }
 }
 
 @media screen and (min-width: 1100px) and (max-width: 1400px) {
